@@ -6,6 +6,9 @@
 	</meta>
 	<data type="array">
 		<languageKey index="default" type="array">
+			<label index="tt_content.tx_ratings_pi1.storage.page">Storage page for rating records:</label>
+			<label index="tt_content.tx_ratings_pi1.template_file">Template file to use:</label>
+			<label index="no_ts_template">Error: TS template from ratings extension is not included to site TS template</label>
 		</languageKey>
 	</data>
 </T3locallang>
